--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,11 @@
 DB Access Plugin Changelog
 </h1>
 
+<p><b>1.1</b> -- Sep 13, 2013</p>
+<ul>
+     <li>Requires Openfire 3.9.0.</li>
+</ul>
+
 <p><b>1.0</b> -- Aug 27, 2008</p>
 
 <ul>
