--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
-<p><b>1.2.1</b> -- (tbd)</p>
+<p><b>1.2.1</b> -- January 17, 2019</p>
 <ul>
     <li>[<a href='https://issues.igniterealtime.org/browse/OF-1272'>OF-1272</a>] - DBAccess plugin XSS.</li>
     <li>[<a href='https://issues.igniterealtime.org/browse/OF-1641'>OF-1641</a>] - Ensure all JSP pages have the correct contentType.</li>
