--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
-<html>
+<html lang="en">
 <head>
     <title>Packet Filter Plugin Changelog</title>
     <style type="text/css">
@@ -28,12 +28,12 @@
         }
 
         TT {
-            font-family : courier new, sans-serif;
+            font-family : courier new, monospace;
             font-weight : bold;
             color : #060;
         }
         PRE {
-            font-family : courier new, sans-serif;
+            font-family : courier new, monospace;
             font-size : 100%;
         }
     </style>
@@ -43,6 +43,12 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
+<p><b>1.2.2</b> -- February 12, 2019</p>
+<ul>
+    <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/2'>Issue #2</a>] - DB Access menu page is not loading in 4.2.3</li>
+    <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/3'>Issue #3</a>] - Fix Maven build</li>
+</ul>
+
 <p><b>1.2.1</b> -- January 17, 2019</p>
 <ul>
     <li>[<a href='https://issues.igniterealtime.org/browse/OF-1272'>OF-1272</a>] - DBAccess plugin XSS.</li>
