--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
+<p><b>1.2.3</b> -- (to be determined)</p>
+<ul>
+    <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/7'>Issue #7</a>] - Prevent issues with attempting to render BLOB data.</li>
+</ul>
+
 <p><b>1.2.2</b> -- February 12, 2019</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/2'>Issue #2</a>] - DB Access menu page is not loading in 4.2.3</li>
