Fixes #10: Allow results space to expand rather than scrolling

--- a/changelog.html
+++ b/changelog.html
@@ -46,6 +46,7 @@ DB Access Plugin Changelog
 <p><b>1.2.3</b> -- (to be determined)</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/7'>Issue #7</a>] - Prevent issues with attempting to render BLOB data.</li>
+    <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/10'>Issue #10</a>] - Insufficient space to see results</li>
 </ul>
 
 <p><b>1.2.2</b> -- February 12, 2019</p>
