--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,11 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
-<p><b>1.2.3</b> -- (to be determined)</p>
+<p><b>1.2.4</b> -- (To be determined)</p>
+<ul>
+</ul>
+
+<p><b>1.2.3</b> -- December 17, 2020</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/7'>Issue #7</a>] - Prevent issues with attempting to render BLOB data.</li>
     <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/10'>Issue #10</a>] - Insufficient space to see results</li>
