fixes #13: Show recently executed queries.
This adds a list of SQL queries that were recently executed. Clicking on a query makes move to the text input area.

The current implementation will cause the list to be cleared upon restarting Openfire or the plugin.

--- a/changelog.html
+++ b/changelog.html
@@ -43,8 +43,9 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
-<p><b>1.2.4</b> -- (To be determined)</p>
+<p><b>1.3.0</b> -- (To be determined)</p>
 <ul>
+    <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/13'>Issue #13</a>] - Show recently executed queries.</li>
 </ul>
 
 <p><b>1.2.3</b> -- December 17, 2020</p>
