--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
 <h1>
 DB Access Plugin Changelog
 </h1>
-<p><b>1.3.0</b> -- (To be determined)</p>
+<p><b>1.3.0</b> -- September 12, 2024</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-dbaccess-plugin/issues/13'>Issue #13</a>] - Show recently executed queries.</li>
 </ul>
